--- a/admin.html
+++ b/admin.html
@@ -181,8 +181,8 @@
                 <label>Tagline:</label>
                 <input type="text" id="portfolio-tagline" required>
 
-                <label>Image:</label>
-                <input type="file" id="portfolio-image" accept="image/*">
+                <label>Image URL:</label>
+                <input type="url" id="portfolio-image-url" placeholder="https://example.com/image.jpg" required>
 
                 <label>Description:</label>
                 <textarea id="portfolio-description" rows="6" required></textarea>
@@ -206,8 +206,8 @@
                 <label>Testimonial Text:</label>
                 <textarea id="testimonial-text" rows="4" required></textarea>
 
-                <label>Photo:</label>
-                <input type="file" id="testimonial-photo" accept="image/*">
+                <label>Photo URL (optional):</label>
+                <input type="url" id="testimonial-photo-url" placeholder="https://example.com/photo.jpg">
 
                 <button type="submit">Save</button>
             </form>
