--- a/admin.html
+++ b/admin.html
@@ -114,8 +114,9 @@
                         <label>About Bio:</label>
                         <textarea id="about-bio" rows="5"></textarea>
 
-                        <label>About Image URL:</label>
-                        <input type="url" id="about-image">
+                        <label>About Image:</label>
+                        <input type="file" id="about-image-file" accept="image/*">
+                        <input type="url" id="about-image" placeholder="Or enter URL">
 
                         <label>Social Media Links:</label>
                         <input type="url" id="social-facebook" placeholder="Facebook">
@@ -156,8 +157,9 @@
                 <label>Description:</label>
                 <textarea id="service-description" rows="4" required></textarea>
 
-                <label>Icon URL:</label>
-                <input type="url" id="service-icon">
+                <label>Icon:</label>
+                <input type="file" id="service-icon-file" accept="image/*">
+                <input type="url" id="service-icon" placeholder="Or enter URL">
 
                 <label>Starting Price:</label>
                 <input type="number" id="service-price">
@@ -181,8 +183,9 @@
                 <label>Tagline:</label>
                 <input type="text" id="portfolio-tagline" required>
 
-                <label>Image URL:</label>
-                <input type="url" id="portfolio-image-url" placeholder="https://example.com/image.jpg" required>
+                <label>Image:</label>
+                <input type="file" id="portfolio-image-file" accept="image/*">
+                <input type="url" id="portfolio-image-url" placeholder="Or enter URL">
 
                 <label>Description:</label>
                 <textarea id="portfolio-description" rows="6" required></textarea>
@@ -206,8 +209,9 @@
                 <label>Testimonial Text:</label>
                 <textarea id="testimonial-text" rows="4" required></textarea>
 
-                <label>Photo URL (optional):</label>
-                <input type="url" id="testimonial-photo-url" placeholder="https://example.com/photo.jpg">
+                <label>Photo:</label>
+                <input type="file" id="testimonial-photo-file" accept="image/*">
+                <input type="url" id="testimonial-photo-url" placeholder="Or enter URL">
 
                 <button type="submit">Save</button>
             </form>
